@@ -3389,122 +3389,6 @@ class ModelDescription:
                     vrefs.append(sv.get_value_reference())
         return vrefs
 
-    def get_external_libraries(self, ignore_cache=False):
-        """ 
-        Get all external library entries. 
-        
-        Parameters::
-
-            ignore_cache -- 
-                If False look for the value in the cache first, if True skip 
-                cache and derive value from data structure.
-                Default: False
-                
-        Returns::
-        
-            The external library entries in a list.
-        """
-        if not ignore_cache:
-            return self.function_cache.get(self, 'get_external_libraries', None)
-        
-        libraries = []
-        
-        tools = self.get_vendor_annotations()
-        for tool in tools:
-            if tool.get_name() == 'JModelica':
-                annotations = tool.get_annotations()
-                for annotation in annotations:
-                    if annotation.get_name() == 'Library':
-                        libraries.append(annotation.get_value())
-        return libraries
-        
-    def get_external_includes(self, ignore_cache=False):
-        """
-        Get all external file includes.
-        
-        Parameters::
-        
-            ignore_cache -- 
-                If False look for the value in the cache first, if True skip 
-                cache and derive value from data structure.
-                Default: False
-                
-        Returns::
-        
-            The external file includes in a list.
-        """
-        if not ignore_cache:
-            return self.function_cache.get(self, 'get_external_includes', None)
-        
-        includes = []
-        
-        tools = self.get_vendor_annotations()
-        for tool in tools:
-            if tool.get_name() == 'JModelica':
-                annotations = tool.get_annotations()
-                for annotation in annotations:
-                    if annotation.get_name() == 'Include':
-                        includes.append(annotation.get_value())
-        return includes
-        
-    def get_external_lib_dirs(self, ignore_cache=False):
-        """ 
-        Get all external library directories. 
-        
-        Parameters::
-        
-            ignore_cache -- 
-                If False look for the value in the cache first, if True skip 
-                cache and derive value from data structure.
-                Default: False
-                
-        Returns::
-        
-            The external library directories in a list.
-        """
-        if not ignore_cache:
-            return self.function_cache.get(self, 'get_external_lib_dirs', None)
-            
-        libdirs = []
-        
-        tools = self.get_vendor_annotations()
-        for tool in tools:
-            if tool.get_name() == 'JModelica':
-                annotations = tool.get_annotations()
-                for annotation in annotations:
-                    if annotation.get_name() == 'LibraryDirectory':
-                        libdirs.append(annotation.get_value())
-        return libdirs
-        
-    def get_external_incl_dirs(self, ignore_cache=False):
-        """ 
-        Get all external include directories. 
-        
-        Parameters::
-        
-            ignore_cache -- 
-                If False look for the value in the cache first, if True skip 
-                cache and derive value from data structure.
-                Default: False
-                
-        Returns::
-        
-            The external include directories in a list.
-        """
-        if not ignore_cache:
-            return self.function_cache.get(self, 'get_external_incl_dirs', None)
-            
-        includedirs = []
-        
-        tools = self.get_vendor_annotations()
-        for tool in tools:
-            if tool.get_name() == 'JModelica':
-                annotations = tool.get_annotations()
-                for annotation in annotations:
-                    if annotation.get_name() == 'IncludeDirectory':
-                        includedirs.append(annotation.get_value())
-        return includedirs
-
     def get_opt_starttime(self, ignore_cache=False):
         """ 
         Get the optimization interval start time. 
